Classe removida do styles.css

--- a/pages/homepage/homepage.html
+++ b/pages/homepage/homepage.html
@@ -40,9 +40,11 @@
         <section class="section-container">
             <article class="article-container">
                     <h2 class="article-title">Projects</h2>
-                    <a href="https://github.com/Quin-shi-huan/cv_single_page" target="_blank" rel="noopener noreferrer">CV &#8208; Single page</a>
-                    <br>
-                    <a href="https://github.com/Quin-shi-huan/Basic-HTML-Website" target="_blank" rel="noopener noreferrer">Basic HTML Website</a>
+                    <div class="projects-container">
+                        <a href="https://github.com/Quin-shi-huan/cv_single_page" target="_blank" rel="noopener noreferrer">CV &#8208; Single page</a>
+                        
+                        <a href="https://github.com/Quin-shi-huan/Basic-HTML-Website" target="_blank" rel="noopener noreferrer">Basic HTML Website</a>
+                    </div>
             </article>
 
             <article class="article-container">
